# finviz-api

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  fly.toml  fundamentals.py  pyproject.toml  test.py
app/: main.py  screener.py
data/: finviz_fundamentals.csv  finviz_tickers.csv
