[project]
name = "finviz-api"
version = "0.1.0"
description = "API for finviz screener"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.115.11",
    "finscreen>=0.1.1",
    "logging>=0.4.9.6",
    "lxml>=5.3.1",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "python-decouple>=3.8",
    "requests>=2.32.3",
    "uvicorn[standard]>=0.34.0",
]
